--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
     "next": "15.0.3",
+    "nodemailer": "^6.9.16",
     "openai": "^4.76.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
